# teach-me

./: .gitignore  README.md  alembic.ini  db.sqlite3  docker-compose.yaml  pyproject.toml  pytest.ini  run.py
.github/workflows/: test-before-merge.yml
alembic/: env.py
alembic/versions/: 1b5a4d813dca_initial_migration.py  435f477d83a0_create_user_table.py  9ab4932695bc_convert_item_to_question_model.py  9e7c6bede288_add_additional_fields.py  b126eaf39736_add_created_at_to_user_model.py  d491c1000595_add_tags.py
app/: database.py  main.py  pagination.py  security.py
app/config/: settings.py
app/crud/: questions.py  tags.py  user.py
app/models/: questions.py  questions_tags.py  tags.py  user.py
app/routers/: auth.py  questions.py  tags.py  user.py
app/schemas/: user.py
config/: default.yaml  local.yaml  render.yaml  settings.toml
core/: admin_scripts.py  settings.py  urls.py
docker/local/django/: start  (+2 more)
docker/render/: Dockerfile
missions/: models.py  urls.py
missions/api/: serializers.py  viewsets.py
missions/migrations/: 0001_initial.py  0002_alter_mission_user.py
questions/: admin.py  models.py  urls.py
questions/api/: serializers.py  views.py  viewsets.py
questions/migrations/: 0001_initial.py  0002_alter_category_options_alter_question_category.py
roles/: apps.py  models.py  urls.py
roles/api/: serializers.py  viewsets.py
roles/migrations/: 0001_initial.py
shopping_list/: admin.py  models.py  tests.py  urls.py
shopping_list/api/: serializers.py  views.py  viewsets.py
shopping_list/fixtures/: initial_shopping_items.json  initial_shoppping_lists_with_items.json
shopping_list/migrations/: 0001_initial.py  0002_shoppinglist_shoppingitem_shopping_list.py  (+1 more)
tests/: test.py
