[tool.poetry]
name = "Teach me"
version = "0.1.0"
description = ""
authors = ["<maciej.sitowski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
fastapi-pagination = "^0.12.32"
passlib = "^1.7.4"
bcrypt = "3.2.2"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
